Fix translation of dtors with primitives and array types